  resource while processing emudesk.inf. (RFB)
- desk/deskapp.c: Validate icon number when reading EMUDESK.INF. (RFB)
- bios/amiga.c bios/amiga.h bios/bios.c bios/kprint.c include/config.h:
  Added kprintf() support for UAE. (VRI)
- bios/amiga.c bios/amiga.h bios/bios.c: Added shutdown support for UAE. (VRI)

2012-07-16
- bios/amiga.c: Added support for Zorro II / Zorro III Fast RAM. (VRI)

2012-07-17
- bios/amiga.c bios/amiga.h bios/amiga2.S: Added support for A3000/A4000
  motherboard RAM. (VRI)
- bios/amiga.c: Added check for 32-bit address bus. (VRI)
- bios/initinfo.c bios/machine.c bios/machine.h: Removed duplicate declaration
  of mcpu and fputype. (VRI)
- bios/amiga.c bios/amiga.h bios/amiga2.S bios/machine.c: Added support for
  Slow RAM. (VRI)
- bios/amiga.c: Fixed crash when there is no expansion board. (VRI)
- bios/ide.c: Cleaned up Amiga IDE autodetection. (VRI)
- bios/amiga.c: Fixed crash on shutdown when uaelib is not available. (VRI)

2012-07-18
- bdos/umem.c: Shrink alternate RAM blocks to multiples of 4 bytes. (VRI)
- bdos/umem.c: Fixed overlap test beween alt RAM blocks and ST-RAM. (VRI)
- bdos/umem.c: Merge contiguous alt RAM blocks. (VRI)

2012-07-19
- bios/amiga.c: Added keyboard acknowledges required for real Amiga hardware
  and WinUAE 2.4.0 or higher. (VRI)

2012-07-22
- bios/amiga.c bios/amiga.h bios/amiga2.S bios/screen.c: Added setphys() and
 Getphys() support for Amiga(). (VRI)

2012-07-23
- include/config.h bios/processor.S: Added CONF_WITH_SFP004 (Mega ST 68881 FPU
  board) to avoid testing 0xfffffa40 on non-Atari hardware. (VRI)

2012-07-30
- .cvsignore Makefile release.mk tools/map2sym.sh doc/readme-512k.txt: Make
  512 now generates debug symbols for Hatari in etos512.sym. Contributed by Eero
  Tamminen. (VRI)

2012-08-01
- bios/ikbd.c: Slightly optimized ikbdws() to work around a stack problem in
  the Falcon demo "Blue" by "New Beat". (THH)
- bios/xbios.c: Fixed compilation with DBG_XBIOS. (VRI)