@@ -3870,3 +3870,4 @@ Start... early ages
 - bios/ikbd.c: Slightly optimized ikbdws() to work around a stack problem in
   the Falcon demo "Blue" by "New Beat". (THH)
 - bios/xbios.c: Fixed compilation with DBG_XBIOS. (VRI)
+- desk/deskapp.c desk/deskbind.h: Changed three globals into locals. (RFB)
